projects/lungmen.akn/dist/apps/atuin/core.v1.Service.atuin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
    app.kubernetes.io/part-of: atuin
  name: atuin
  namespace: atuin
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
