projects/lungmen.akn/dist/apps/atuin/gateway.networking.k8s.io.v1.HTTPRoute.atuin-websecure.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/include-unifi: "true"
    link.argocd.argoproj.io/external-link: https://atuin.chezmoi.sh
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
  name: atuin-websecure
  namespace: atuin
spec:
  hostnames:
  - atuin.chezmoi.sh
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: atuin
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
