projects/lungmen.akn/dist/apps/atuin/networking.k8s.io.v1.Ingress.atuin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    link.argocd.argoproj.io/external-link: https://atuin.tail831c5d.ts.net
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
    tailscale.com/proxy-class: restricted
  name: atuin
  namespace: atuin
spec:
  defaultBackend:
    service:
      name: atuin
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - atuin
