projects/lungmen.akn/dist/apps/atuin/cilium.io.v2.CiliumNetworkPolicy.allow-atuin-from-cilium-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway API to route traffic to the atuin application.
      Traffic proxied by Cilium Gateway API carries the reserved:ingress identity,
      as per https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
  name: allow-atuin-from-cilium-gateway
  namespace: atuin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: atuin
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: "8888"
        protocol: TCP
