projects/lungmen.akn/dist/apps/atuin/cilium.io.v2.CiliumNetworkPolicy.allow-atuin-from-envoy-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Envoy Gateway to route traffic to atuin application.
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
  name: allow-atuin-from-envoy-gateway
  namespace: atuin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: atuin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
