projects/lungmen.akn/dist/apps/atuin/cilium.io.v2.CiliumNetworkPolicy.allow-atuin-from-tailscale.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Tailscale Ingress to route traffic to Atuin application
      for secure VPN-only access via MagicDNS endpoint.
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
  name: allow-atuin-from-tailscale
  namespace: atuin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: atuin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-system
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
